# spamton-store-backend

./: .env.sample  .env_exemplo  .gitignore  README.md  bruh.json  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
produto/: admin.py  models.py  permissions.py  serializers.py  views.py
produto/migrations/: 0004_fabricante_produto_precopromo_produto_promo_and_more.py  0005_produto_fabricante.py  0006_delete_imagem.py  0007_produto_imagens.py  0008_alter_produto_thumbnail.py  0009_alter_produto_categoria_alter_produto_fabricante.py  0010_alter_produto_categoria.py  0011_remove_produto_categoria_remove_produto_fabricante.py  0012_produto_categoria_produto_fabricante.py  0013_alter_produto_categoria_alter_produto_fabricante.py  0014_produto_nome21.py  0015_alter_produto_nome21.py  0016_remove_produto_nome21.py  0017_remove_fabricante_logo.py  0018_compra.py  0019_itenscompra.py
produto/models/: __init__.py  categoria.py  compra.py  fabricante.py  imagem.py  produto.py
produto/serializers/: __init__.py  categoria.py  compra.py  fabricante.py  imagem.py  produto.py
produto/views/: __init__.py  categoria.py  compra.py  fabricante.py  imagem.py  produto.py
spamton_store_backend/: settings.py  urls.py
uploader/migrations/: 0001_initial.py  0002_image_produto.py  0003_remove_image_produto.py
uploader/models/: image.py
usuario/: __init__.py  admin.py  forms.py  models.py  permissions.py  serializers.py  views.py
usuario/migrations/: 0001_initial.py  0002_usuario_imagem_perfil.py  0003_alter_usuario_imagem_perfil.py  0004_alter_usuario_imagem_perfil.py  0005_salvacao.py  0006_delete_salvacao.py  0007_remove_usuario_imagem_perfil_usuario_foto.py  0008_alter_usuario_foto.py
usuario/models/: usuario.py
usuario/serializers/: __init__.py  usuario.py
usuario/views/: usuario.py
