[project]
name = "Spamton-Store_Backend"
version = "0.1"
description = ""
authors = [
    {name = "Brobss", email = "gabrieldomingos13@gmail.com"},
]
dependencies = [
    "django>=4.2.6",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "djangorestframework-simplejwt>=5.2.2",
    "setuptools>=68.1.0",
    "gunicorn>=21.2.0",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "drf-spectacular>=0.26.4",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "django-filter>=23.2",
    "django-cloudinary-storage>=0.3.0",
    "whitenoise[brotli]>=6.5.0",
    "netifaces>=0.11.0",
]


requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "python manage.py runserver 0.0.0.0:19003"
runserver = "python manage.py runserver"
createsuperuser = "python manage.py createsuperuser"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
shell = "python manage.py shell"
test = "python manage.py test"
startapp = "python manage.py startapp {args}"
loaddata = "python manage.py loaddata {args}"
dumpdata = "python manage.py dumpdata {args}"
pre_dev = "python ./scripts/set_my_ip.py"

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"


